Card Maker Version History
--------------------------
1.0.0.2
- The opacity of inline elements can be specified with an alpha value on the element color (assuming I am happy with the outcome).
- Updated project wide export image/pdf to skip layouts with references but no actual entries
- Removed translation for substrings that results in an error message (now it will just translate to an empty string)
- Added AddOverrideField to JavaScript definition functionality (Thanks to salmelo - github pull request)
- Added ability to translate rotated elements within the original and resulting bounds
- Inline images in FormattedText now default to size 1.0
- Fixed issue with Local Google Cache
- Fixed crash related to clearing the Image Cache and FormattedText (hopefully)
- Added individual export button to the canvas toolbar
- Added clipboard copy button to the canvas toolbar
- Added font preview to the font selection dialog.
- Fixed export issue involving use of the cardcount functionality
- Added background color for all element types
- Added zoom helpers (Fit + Fit Horizontal)... will someone need "Fit Vertical" ???
- Added inline background shape functionality
- Added inline background graphic functionality
- Added graphic tiling option ("tile size")
- Added switch alternative with a different delimiter (customizable!)
- Fixed problem with random number functionality (text after the replacement was lost!)
- Fixed issue with justified text (not clear it was even functional...)

1.0.0.1
- Added divider functionality
- Added ![cardcount] functionality to the Incept translator
- Added ability to override element fields in the define/variable field with $[fieldname:value] (same override formatting as data source)
- Added ability to configure PDF exports in cm, mm, and inches
- Added ability to configure Layout size based on cm, mm, and inch values
- Added sub counter functionality to file name (Thanks Feynt)